--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/jobPortal
+MONGO_URI=mongodb+srv://thesouravmohanty:<db_password>@jobportal.zwukykd.mongodb.net/
 JWT_SECRET=supersecretkey123
